Fixed bug #29476 (sqlite_fetch_column_types() locks the database forever).